before cleaning up intro - Alice

--- a/_main.tex
+++ b/_main.tex
@@ -17,10 +17,7 @@
 \usepackage{xr}
 \usepackage{graphicx}
 \usepackage{subcaption} % for imaes
-
-
-
-
+\usepackage{placeins}
 \usepackage{titlesec}
 \usepackage{enumitem}
 
@@ -29,6 +26,7 @@
 \newcommand{\todo}[1]{\textcolor{red}{[TODO: #1]}}
 \newcommand{\paul}[1]{\textcolor{red}{[paul: #1]}}
 \newcommand{\jh}[1]{\textcolor{violet}{[JH: #1]}}
+\newcommand{\aq}[1]{\textcolor{orange}{[AQ: #1]}}
 \newcommand{\jc}[1]{{\color{magenta}[JC: #1]}}
 \newcommand{\lj}[1]{{\color{blue}[LJ: #1]}}
 \newcommand{\eh}[1]{{\color{brown}[EH: #1]}}
