--- a/_references.bib
+++ b/_references.bib
@@ -162,24 +162,6 @@ location = {
 series = {FAccT '25}
 }
 
-@inproceedings{review,
-author = {Hu, Xi and Xing, Yiwen and Cai, Xudong and Zhao, Yihang and Cook, Michael and Borgo, Rita and Neate, Timothy},
-title = {Designing Interactions with Generative AI for Art and Creativity: A Systematic Review and Taxonomy},
-year = {2025},
-isbn = {9798400714856},
-publisher = {Association for Computing Machinery},
-address = {New York, NY, USA},
-url = {https://doi.org/10.1145/3715336.3735843},
-doi = {10.1145/3715336.3735843},
-abstract = {Generative Artificial Intelligence (GenAI) applications in artistic and creative domains have gained substantial attention of late. These intelligent interactive systems, shaped by innovations in Large Language Models (LLMs) and Vision Language Models (VLMs), are materially impacting digital creative domains. While initial work to understand this space has highlighted new models and architectures, we lack a holistic view of how interactive GenAI systems are designed for user interactions across various artistic and creative domains. In this paper, we present a systematic review of interactive GenAI system designs for art and creativity in the HCI literature (N = 189), and a detailed taxonomy of interaction paradigms with design components. We shed light on the communities of design focus and decompose the system interaction designs, mapping these characteristics to creative domains, user interaction patterns, GenAI technologies, detailing under-represented spaces, and future directions of designing interactions for GenAI creativity.},
-booktitle = {Proceedings of the 2025 ACM Designing Interactive Systems Conference},
-pages = {1126–1155},
-numpages = {30},
-keywords = {Generative AI, art, creativity, systematic review, taxonomy.},
-location = {
-},
-series = {DIS '25}
-}
 
 @article{barriers,
   title={What barriers do people experience to engaging in the arts? Structural equation modelling of the relationship between individual characteristics and capabilities, opportunities, and motivations to engage},
@@ -214,18 +196,6 @@ booktitle={The Twelfth International Conference on Learning Representations},
 year={2024},
 url={https://openreview.net/forum?id=di52zR8xgf}
 }
-
-@article{synesthesia,
-  title={Generative artificial intelligence, human creativity, and art},
-  author={Zhou, Eric and Lee, Dokyun},
-  journal={PNAS nexus},
-  volume={3},
-  number={3},
-  pages={pgae052},
-  year={2024},
-  publisher={Oxford University Press US}
-}
-
 
 @article{paradox,
   title={The paradox of artificial creativity: Challenges and opportunities of generative AI artistry},
@@ -301,24 +271,6 @@ url={https://openreview.net/forum?id=di52zR8xgf}
   pages={7--19},
   year={2024},
   publisher={Springer}
-}
-
-@inproceedings{impact,
-author = {Kawakami, Reishiro and Venkatagiri, Sukrit},
-title = {The Impact of Generative AI on Artists},
-year = {2024},
-isbn = {9798400704857},
-publisher = {Association for Computing Machinery},
-address = {New York, NY, USA},
-url = {https://doi.org/10.1145/3635636.3664263},
-doi = {10.1145/3635636.3664263},
-abstract = {Generative AI has the potential to augment artists’ creative expression, while simultaneously harming their professions through unethical data collection practices and replacement of human labor. We conducted a thematic analysis of social media posts to understand artists’ perceptions and experiences of the direct and indirect impact of generative AI on their profession. Our findings also highlight growing public distrust toward artists amidst the rise of generative AI, with accusations of using AI tools leading to stress and fear of unemployment. Our study provides valuable insights into the complex interplay between artists, generative AI, and the public. We discuss potential protective measures for artists, including regulatory interventions and opt-in/out data collection, and explore future impacts of generative AI on artists’ creative processes.},
-booktitle = {Proceedings of the 16th Conference on Creativity \& Cognition},
-pages = {79–82},
-numpages = {4},
-keywords = {AI art, Artists, Generative AI, artwork, creative professions},
-location = {Chicago, IL, USA},
-series = {C&C '24}
 }
 
 @inproceedings{lgtm,
@@ -485,6 +437,72 @@ url={https://openreview.net/forum?id=PhRYDGqiee}
       primaryClass={cs.CV},
       url={https://arxiv.org/abs/2412.01506}, 
 }
+
+@article{shi2023understanding,
+  title={Understanding generative AI in art: an interview study with artists on G-AI from an HCI perspective},
+  author={Shi, Jingyu and Jain, Rahul and Duan, Runlin and Ramani, Karthik},
+  journal={arXiv preprint arXiv:2310.13149},
+  year={2023}
+}
+
+@inproceedings{li2024user,
+  title={User experience design professionals’ perceptions of generative artificial intelligence},
+  author={Li, Jie and Cao, Hancheng and Lin, Laura and Hou, Youyang and Zhu, Ruihao and El Ali, Abdallah},
+  booktitle={Proceedings of the 2024 CHI conference on human factors in computing systems},
+  pages={1--18},
+  year={2024}
+}
+
+@inproceedings{hu2025designing,
+  title={Designing Interactions with Generative AI for Art and Creativity: A Systematic Review and Taxonomy},
+  author={Hu, Xi and Xing, Yiwen and Cai, Xudong and Zhao, Yihang and Cook, Michael and Borgo, Rita and Neate, Timothy},
+  booktitle={Proceedings of the 2025 ACM Designing Interactive Systems Conference},
+  pages={1126--1155},
+  year={2025}
+}
+
+@inproceedings{jiang2025forging,
+  title={Forging an HCI Research Agenda with Artists Impacted by Generative AI},
+  author={Jiang, Harry H and Agnew, William and Friedlander, Tim and Yang, Zhuolin and Fox, Sarah E and Bernstein, Michael S and Passananti, Josephine Charlie and Ogata, Megumi and Ortiz, Karla},
+  booktitle={Proceedings of the Extended Abstracts of the CHI Conference on Human Factors in Computing Systems},
+  pages={1--4},
+  year={2025}
+}
+
+@article{giacomin2023intersection,
+  title={The intersection of AI and Art-Mapping the controversy around Generative AI tools as producers of artworks in the 2020s},
+  author={Giacomin Da Silva, Carolina},
+  year={2023}
+}
+
+@inproceedings{inie2023designing,
+  title={Designing participatory ai: Creative professionals’ worries and expectations about generative ai},
+  author={Inie, Nanna and Falk, Jeanette and Tanimoto, Steve},
+  booktitle={Extended Abstracts of the 2023 CHI Conference on Human Factors in Computing Systems},
+  pages={1--8},
+  year={2023}
+}
+
+@inproceedings{muller2025genaichi,
+  title={GenAICHI 2025: Generative AI and HCI at CHI 2025},
+  author={Muller, Michael and Chilton, Lydia B and Maher, Mary Lou and Martin, Charles Patrick and Choi, Minsik and Walsh, Greg and Kantosalo, Anna},
+  booktitle={Proceedings of the Extended Abstracts of the CHI Conference on Human Factors in Computing Systems},
+  pages={1--9},
+  year={2025}
+}
+
+@article{epstein2023art,
+  title={Art and the science of generative AI},
+  author={Epstein, Ziv and Hertzmann, Aaron and Investigators of Human Creativity and Akten, Memo and Farid, Hany and Fjeld, Jessica and Frank, Morgan R and Groh, Matthew and Herman, Laura and Leach, Neil and others},
+  journal={Science},
+  volume={380},
+  number={6650},
+  pages={1110--1111},
+  year={2023},
+  publisher={American Association for the Advancement of Science}
+}
+
+
 @misc{magiccolor,
       title={Follow-Your-Color: Multi-Instance Sketch Colorization}, 
       author={Yinhan Zhang and Yue Ma and Bingyuan Wang and Qifeng Chen and Zeyu Wang},
@@ -511,15 +529,6 @@ url={https://openreview.net/forum?id=PhRYDGqiee}
       archivePrefix={arXiv},
       primaryClass={cs.CV},
       url={https://arxiv.org/abs/2502.19937}, 
-}
-@misc{qwenimage,
-      title={Qwen-Image Technical Report}, 
-      author={Chenfei Wu and Jiahao Li and Jingren Zhou and Junyang Lin and Kaiyuan Gao and Kun Yan and Sheng-ming Yin and Shuai Bai and Xiao Xu and Yilei Chen and Yuxiang Chen and Zecheng Tang and Zekai Zhang and Zhengyi Wang and An Yang and Bowen Yu and Chen Cheng and Dayiheng Liu and Deqing Li and Hang Zhang and Hao Meng and Hu Wei and Jingyuan Ni and Kai Chen and Kuan Cao and Liang Peng and Lin Qu and Minggang Wu and Peng Wang and Shuting Yu and Tingkun Wen and Wensen Feng and Xiaoxiao Xu and Yi Wang and Yichang Zhang and Yongqiang Zhu and Yujia Wu and Yuxuan Cai and Zenan Liu},
-      year={2025},
-      eprint={2508.02324},
-      archivePrefix={arXiv},
-      primaryClass={cs.CV},
-      url={https://arxiv.org/abs/2508.02324},
 }
 
 @misc{backgroundremove,
@@ -992,4 +1001,217 @@ numpages = {10},
 keywords = {creativity, novices, painting},
 location = {Honolulu, Hawaii, USA},
 series = {UIST '14}
+}
+@inproceedings{lin2014visual,
+  title={Visual semantic search: Retrieving videos via complex textual queries},
+  author={Lin, Dahua and Fidler, Sanja and Kong, Chen and Urtasun, Raquel},
+  booktitle={Proceedings of the IEEE conference on computer vision and pattern recognition},
+  pages={2657--2664},
+  year={2014}
+}
+
+@article{cocreative,
+  title={Exploring co-creative drawing workflows},
+  author={Jansen, Chipp and Sklar, Elizabeth},
+  journal={Frontiers in Robotics and AI},
+  volume={8},
+  pages={577770},
+  year={2021},
+  publisher={Frontiers Media SA}
+}
+
+@article{devalue,
+  title={Co-creating art with generative artificial intelligence: Implications for artistic evaluation and collaboration dynamics in the digital age},
+  author={Zhao, Y and Liu, J},
+  journal={Artificial Intelligence Review},
+  year={2024}
+}
+
+@article{image_democratization,
+  title={Democratization and generative AI image creation: aesthetics, citizenship, and practices},
+  author={Bak Herrie, Maja and Maleve, Nicolas Ren{\'e} and Philipsen, Lotte and Staun{\ae}s, Asker Bryld},
+  journal={AI \& SOCIETY},
+  volume={40},
+  number={5},
+  pages={3495--3507},
+  year={2025},
+  publisher={Springer}
+}
+
+@article{decline_novelty,
+    author = {Zhou, Eric and Lee, Dokyun},
+    title = {Generative artificial intelligence, human creativity, and art},
+    journal = {PNAS Nexus},
+    volume = {3},
+    number = {3},
+    pages = {52},
+    year = {2024},
+    month = {03},
+    abstract = {Recent artificial intelligence (AI) tools have demonstrated the ability to produce outputs traditionally considered creative. One such system is text-to-image generative AI (e.g. Midjourney, Stable Diffusion, DALL-E), which automates humans’ artistic execution to generate digital artworks. Utilizing a dataset of over 4 million artworks from more than 50,000 unique users, our research shows that over time, text-to-image AI significantly enhances human creative productivity by 25\% and increases the value as measured by the likelihood of receiving a favorite per view by 50\%. While peak artwork Content Novelty, defined as focal subject matter and relations, increases over time, average Content Novelty declines, suggesting an expanding but inefficient idea space. Additionally, there is a consistent reduction in both peak and average Visual Novelty, captured by pixel-level stylistic elements. Importantly, AI-assisted artists who can successfully explore more novel ideas, regardless of their prior originality, may produce artworks that their peers evaluate more favorably. Lastly, AI adoption decreased value capture (favorites earned) concentration among adopters. The results suggest that ideation and filtering are likely necessary skills in the text-to-image process, thus giving rise to “generative synesthesia”—the harmonious blending of human exploration and AI exploitation to discover new creative workflows.},
+    issn = {2752-6542},
+}
+
+
+@article{student_ai,
+  title={My teammate is AI: Understanding students’ perceptions of student-AI collaboration in drawing tasks},
+  author={Kim, Jinhee and Cho, Young Hoan},
+  journal={Asia Pacific Journal of Education},
+  volume={45},
+  number={3},
+  pages={1013--1027},
+  year={2025},
+  publisher={Taylor \& Francis}
+}
+
+
+@article{liberation,
+	abstract = {This paper investigates the transformative influence of generative AI on the arts, connecting it with Walter Benjamin's insights regarding the aura of art in the mechanical reproduction era. It scrutinizes how generative AI not only redefines art's traditional aura but also introduces a dynamic interplay between technological liberation and dependency. The analysis extends to the democratization of artistic expression and its broader societal impacts, highlighting a shift in art creation, perception, and interpretation in the digital age. This research encapsulates the evolving nature of authenticity, creativity, and human--machine collaboration, marking a significant paradigm shift in art's conception and its role in society.},
+	author = {Park, Sungjin},
+	date = {2025/03/01},
+	date-added = {2025-09-10 09:13:32 -0400},
+	date-modified = {2025-09-10 09:13:32 -0400},
+	doi = {10.1007/s00146-024-01948-6},
+	id = {Park2025},
+	isbn = {1435-5655},
+	journal = {AI \& SOCIETY},
+	number = {3},
+	pages = {1807--1816},
+	title = {The work of art in the age of generative AI: aura, liberation, and democratization},
+	url = {https://doi.org/10.1007/s00146-024-01948-6},
+	volume = {40},
+	year = {2025},
+	bdsk-url-1 = {https://doi.org/10.1007/s00146-024-01948-6}}
+
+
+@inproceedings{everybody_sketch,
+author = {Bae, Seok-Hyung and Balakrishnan, Ravin and Singh, Karan},
+title = {EverybodyLovesSketch: 3D sketching for a broader audience},
+year = {2009},
+isbn = {9781605587455},
+publisher = {Association for Computing Machinery},
+address = {New York, NY, USA},
+url = {https://doi.org/10.1145/1622176.1622189},
+doi = {10.1145/1622176.1622189},
+abstract = {We present EverybodyLovesSketch, a gesture-based 3D curve sketching system for rapid ideation and visualization of 3D forms, aimed at a broad audience. We first analyze traditional perspective drawing in professional practice. We then design a system built upon the paradigm of ILoveSketch, a 3D curve drawing system for design professionals. The new system incorporates many interaction aspects of perspective drawing with judicious automation to enable novices with no perspective training to proficiently create 3D curve sketches. EverybodyLovesSketch supports a number of novel interactions: tick-based sketch plane selection, single view definition of arbitrary extrusion vectors, multiple extruded surface sketching, copy-and-project of 3D curves, freeform surface sketching, and an interactive perspective grid. Finally, we present a study involving 49 high school students (with no formal artistic training) who each learned and used the system over 11 days, which provides detailed insights into the popularity, power and usability of the various techniques, and shows our system to be easily learnt and effectively used, with broad appeal.},
+booktitle = {Proceedings of the 22nd Annual ACM Symposium on User Interface Software and Technology},
+pages = {59–68},
+numpages = {10},
+keywords = {sketch surface, perspective sketching, learnability, gestural interface, axis widget, 3D sketching},
+location = {Victoria, BC, Canada},
+series = {UIST '09}
+}
+
+@article{imperial,
+  title={Generative AI, Everyday Aesthetic Production, and the Imperial Mode of Living},
+  author={Kemper, Jakko},
+  journal={Critical AI},
+  volume={3},
+  number={1},
+  year={2025},
+  publisher={Duke University Press}
+}
+
+@inproceedings{design,
+author = {Lau, Tatiana and Carter, Scott and Chen, Francine and Huynh, Brandon and Kimani, Everlyne and Lee, Matthew L and Sieck, Kate A},
+title = {Democratizing Design through Generative AI},
+year = {2024},
+isbn = {9798400706325},
+publisher = {Association for Computing Machinery},
+address = {New York, NY, USA},
+url = {https://doi.org/10.1145/3656156.3663703},
+doi = {10.1145/3656156.3663703},
+abstract = {Conversations around public spaces are fractured and often circle around designs and their implications for the space. Contributing to this problem is the fact that people often talk past one another. Recent advances in generative AI may help to democratize this process of designing for public spaces and enable people to meaningfully converse with one another. Here, we develop a platform that asks users to submit a photo and story about a place in their community that they cherish. The system then pairs each user with a target person whose preferences conflict with their own preferences. Users read the target person’s account and use our generative AI system to redesign a space to accommodate the target person. Preliminary studies demonstrate that the act of redesigning the space may lead to greater empathy for the target person, which may help advance conversations around public spaces.},
+booktitle = {Companion Publication of the 2024 ACM Designing Interactive Systems Conference},
+pages = {239–244},
+numpages = {6},
+keywords = {Design, Generative AI, Multi-stakeholder systems, Social connection},
+location = {IT University of Copenhagen, Denmark},
+series = {DIS '24 Companion}
+}
+
+@misc{dialoguemachine,
+      title={Dialogue with the Machine and Dialogue with the Art World: Evaluating Generative AI for Culturally-Situated Creativity}, 
+      author={Rida Qadri and Piotr Mirowski and Aroussiak Gabriellan and Farbod Mehr and Huma Gupta and Pamela Karimi and Remi Denton},
+      year={2024},
+      eprint={2412.14077},
+      archivePrefix={arXiv},
+      primaryClass={cs.CY},
+      url={https://arxiv.org/abs/2412.14077}, 
+}
+@book{imperiallife,
+title = "The Imperial Mode of Living. Everyday Life and the Ecological Crisis of Capitalism.",
+author = "Ulrich Brand and Markus Wissen",
+year = "2021",
+language = "English",
+publisher = "Verso",
+}
+
+@inproceedings{lima,
+  title={Public Opinions About Copyright for AI-Generated Art: The Role of Egocentricity, Competition, and Experience},
+  author={Lima, Gabriel and Grgi{\'c}-Hla{\v{c}}a, Nina and Redmiles, Elissa M},
+  booktitle={Proceedings of the 2025 CHI Conference on Human Factors in Computing Systems},
+  pages={1--32},
+  year={2025}
+}
+
+@article{chatterjee,
+  title={Art in an age of artificial intelligence},
+  author={Chatterjee, Anjan},
+  journal={Frontiers in psychology},
+  volume={13},
+  pages={1024449},
+  year={2022},
+  publisher={Frontiers Media SA}
+}
+
+@article{architectural,
+  title={Using text-to-image generation for architectural design ideation},
+  author={Paananen, Ville and Oppenlaender, Jonas and Visuri, Aku},
+  journal={International Journal of Architectural Computing},
+  volume={22},
+  number={3},
+  pages={458--474},
+  year={2024},
+  publisher={Sage publications Sage UK: London, England}
+}
+
+@phdthesis{jackson,
+  title={Generative AI as a Democratizing Force in Fine Arts: Navigating the New Landscape of Creation and Consumption},
+  author={Jackson, Will},
+  school={University of Texas at Austin},
+  year={2024}
+}
+
+@inproceedings{design_professionals,
+  title={User experience design professionals’ perceptions of generative artificial intelligence},
+  author={Li, Jie and Cao, Hancheng and Lin, Laura and Hou, Youyang and Zhu, Ruihao and El Ali, Abdallah},
+  booktitle={Proceedings of the 2024 CHI conference on human factors in computing systems},
+  pages={1--18},
+  year={2024}
+}
+
+@article{shi2023understanding,
+  title={Understanding generative AI in art: an interview study with artists on G-AI from an HCI perspective},
+  author={Shi, Jingyu and Jain, Rahul and Duan, Runlin and Ramani, Karthik},
+  journal={arXiv preprint arXiv:2310.13149},
+  year={2023}
+}
+
+@article{explorers,
+  title={" Explorers of Unknown Planets" Practices and Politics of Artificial Intelligence in Visual Arts},
+  author={Caramiaux, Baptiste and Fdili Alaoui, Sarah},
+  journal={Proceedings of the ACM on Human-Computer Interaction},
+  volume={6},
+  number={CSCW2},
+  pages={1--24},
+  year={2022},
+  publisher={ACM New York, NY, USA}
+}
+
+@inproceedings{machine,
+  title={Machine learning processes as sources of ambiguity: Insights from ai art},
+  author={Sivertsen, Christian and Salimbeni, Guido and L{\o}vlie, Anders Sundnes and Benford, Steven David and Zhu, Jichen},
+  booktitle={Proceedings of the 2024 CHI Conference on Human Factors in Computing Systems},
+  pages={1--14},
+  year={2024}
 }
