--- a/sections/7_discussion.tex
+++ b/sections/7_discussion.tex
@@ -1,7 +1,13 @@
 \section{Discussion}
 
+\subsection{Supporting Artistic Skill-building via Enhanced Agency \& Control}
 \todo{Alice's thought: I think we should have a section about the immense opportunity we found in designing tools to help artists build skills rather than like replace them -- we can maybe cite some of the learning sciences lit Haiyi was talking about for the proposal?}
 \jh{agreed!}
+
+\begin{itemize}
+    \item At individual levels: 2d \& 3d artists perceive artistic control differently
+    \item involving community engagement \& feedback or environmental factors
+\end{itemize}
 
 ==== copied over from proposal, if we want to include in discussion ====
 
@@ -10,11 +16,12 @@ Our next aim is to use \textbf{scaffolding} techniques inspired by the learning 
 We will measure upskilling through a combination of self-assessment scales from the education literature, performance-based tasks that track improvement pre-and post- system integration as well as a series of longitudinal user studies. In addition to improving novice artist capabilities, our system will also improve their creativity through challenging them to deviate from historical styles and help creativity and personalization. More broadly, this creativity scaffolding has implications for other domains where human–AI collaboration is critical, including design, education, and knowledge work, pointing toward new ways of using AI not just to automate but to cultivate human creativity and growth.
 
 
-\subsection{agency/control - tools should help artist build skills!}
-\begin{itemize}
-    \item 2d \& 3d artists perceive artistic control differently
-\end{itemize}
-
-\subsection{ethical development/training AI/compensation}
+% \subsection{agency/control - tools should help artist build skills!}
 
 
+
+
+\subsection{Policy Recommendations for ethical development/training AI/compensation}
+
+
+\subsection{Limitations \& Future Work}
