--- a/tables/demographics.tex
+++ b/tables/demographics.tex
@@ -1,7 +1,5 @@
-
 \begin{table}[ht]
 \centering
-\label{tab:interview-demographics}
 \begin{tabular}{p{4cm} p{6cm} p{3.5cm}}
 \toprule
 \textbf{Category} & \textbf{Response Options} & \textbf{Participant Responses} \\
@@ -23,5 +21,6 @@ Screenshot Use Permission & Yes, No, Conditional & Yes: X, No: Y, Conditional: Z
 \bottomrule
 \end{tabular}
 \caption{Participant Demographics (N = 13)}
+\label{tab:interview-demographics}
+\jh{maybe we should add row-by-row participant table to illustrate experiences}
 \end{table}
-
